# proxmox-perl-rs

./: .gitignore  Cargo.toml  Makefile  README.md  defines.mk
Proxmox/Lib/: Common.pm  template.pm
common/pkg/: Makefile
common/pkg/PVE/RS/: CalendarEvent.pm
common/pkg/Proxmox/Lib/: Common.pm  SslProbe.pm
common/pkg/debian/: changelog  control
common/src/: calendar_event.rs  logger.rs  mod.rs  notify.rs  shared_cache.rs  subscription.rs
common/src/apt/: repositories.rs
common/src/bindings/: apt_repositories.rs  calendar_event.rs  mod.rs  notify.rs  oidc.rs  shared_cache.rs  subscription.rs
common/src/oidc/: mod.rs
perl-apt/: repositories.rs
pmg-rs/: Cargo.toml  Fixup.pm  Makefile  test.pl
pmg-rs/debian/: changelog  control  debcargo.toml  rules
pmg-rs/src/: acme.rs  csr.rs  lib.rs  tfa.rs
pmg-rs/src/apt/: repositories.rs
pve-rs/: Cargo.toml  Makefile
pve-rs/debian/: changelog  control  debcargo.toml  rules
pve-rs/src/: calendar_event.rs  lib.rs  notify.rs  notify_context.rs  tfa.rs
pve-rs/src/apt/: repositories.rs
pve-rs/src/bindings/: mod.rs  oci.rs  openid.rs  resource_scheduling_static.rs  tfa.rs
pve-rs/src/bindings/firewall/: mod.rs  sdn.rs
pve-rs/src/bindings/resource_scheduling/: mod.rs  pve_dynamic.rs  pve_static.rs  resource.rs  usage.rs
pve-rs/src/bindings/sdn/: fabrics.rs  mod.rs
pve-rs/src/firewall/: mod.rs  sdn.rs
pve-rs/src/openid/: mod.rs
pve-rs/src/resource_scheduling/: static.rs
pve-rs/src/sdn/: mod.rs  status.rs
pve-rs/src/tfa/: mod.rs
pve-rs/src/tfa/proxmox_tfa_api/: api.rs  mod.rs  u2f.rs  webauthn.rs
pve-rs/test/: Makefile  README  resource_scheduling.pl
scripts/: genpackage.pl
