[package]
name = "pmg-rs"
version = "0.7.3"
description = "PMG parts which have been ported to rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = [
    "build",
    "debian",
    "PMG",
]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
hex = "0.4"
http = "0.2.7"
libc = "0.2"
nix = "0.26"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
url = "2"

perlmod = { version = "0.13", features = [ "exporter" ] }

proxmox-acme-rs = { version = "0.4", features = ["client"] }
proxmox-apt = "0.10"
proxmox-http = { version = "0.9", features = ["client-sync", "client-trait"] }
proxmox-http-error = "0.1.0"
proxmox-notify = "0.2"
proxmox-subscription = "0.4"
proxmox-sys = "0.5"
proxmox-tfa = { version = "4.0.4", features = ["api"] }
proxmox-time = "1.1.3"
