[package]
name = "pmg-rs"
version = "0.7.5"
description = "PMG parts which have been ported to rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = ["build", "debian", "PMG"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
hex = "0.4"
http = "0.2.7"
libc = "0.2"
log = "0.4.17"
nix = "0.26"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
url = "2"

perlmod = { version = "0.13.4", features = ["exporter"] }

proxmox-acme = { version = "0.5", features = ["client", "api-types"] }
proxmox-apt = { version = "0.11", features = ["cache"] }
proxmox-apt-api-types = "1.0"
proxmox-config-digest = "0.1"
proxmox-http = { version = "0.9", features = ["client-sync", "client-trait"] }
proxmox-http-error = "0.1.0"
proxmox-notify = "0.4"
proxmox-subscription = "0.4"
proxmox-sys = "0.5"
proxmox-tfa = { version = "5", features = ["api"] }
proxmox-time = "2"
