[package]
name = "pmg-rs"
version = "0.8.0"
description = "PMG parts which have been ported to rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2024"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = ["build", "debian", "PMG"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
http = "1"
libc = "0.2"
nix = "0.29"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
tracing = "0.1.37"
url = "2"

perlmod = { version = "0.14", features = ["exporter"] }

proxmox-acme = { version = "1", features = ["client", "api-types"] }
proxmox-apt = { version = "0.99.2", features = ["cache"] }
proxmox-apt-api-types = "2"
proxmox-config-digest = "1"
proxmox-http = { version = "1", features = ["client-sync", "client-trait"] }
proxmox-http-error = "1"
proxmox-log = "1"
proxmox-notify = "1"
proxmox-openid =  "1"
proxmox-shared-cache = "1"
proxmox-subscription = "1"
proxmox-sys = "1"
proxmox-tfa = { version = "6.0.3", features = ["api"] }
proxmox-time = "2"
