[package]
name = "pve-rs"
version = "0.9.4"
description = "PVE parts which have been ported to Rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2024"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = ["debian"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base32 = "0.4"
base64 = "0.13"
hex = "0.4"
http = "0.2.7"
libc = "0.2"
nix = "0.26"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
tracing = "0.1.37"
url = "2"

perlmod = { version = "0.13.5", features = ["exporter"] }

proxmox-apt = { version = "0.11.5", features = ["cache"] }
proxmox-apt-api-types = "1.0"
proxmox-config-digest = "0.1"
proxmox-http = { version = "0.9", features = ["client-sync", "client-trait"] }
proxmox-http-error = "0.1.0"
proxmox-log = "0.2"
proxmox-notify = { version = "0.5.4", features = ["pve-context"] }
proxmox-openid = "0.10.4"
proxmox-resource-scheduling = "0.3.0"
proxmox-shared-cache = "0.1.0"
proxmox-subscription = "0.5"
proxmox-sys = "0.6"
proxmox-tfa = { version = "5", features = ["api"] }
proxmox-time = "2"
proxmox-ve-config = { version = "0.2.1" }
