[package]
name = "pve-rs"
version = "0.10.0"
description = "PVE parts which have been ported to Rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2024"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = ["debian"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base32 = "0.4"
hex = "0.4"
http = "0.2.7"
libc = "0.2"
nix = "0.29"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
tracing = "0.1.37"
url = "2"

perlmod = { version = "0.14", features = ["exporter"] }

proxmox-apt = { version = "0.99", features = ["cache"] }
proxmox-apt-api-types = "2"
proxmox-base64 = "1"
proxmox-config-digest = "1"
proxmox-http = { version = "1", features = ["client-sync", "client-trait"] }
proxmox-http-error = "1"
proxmox-log = "1"
proxmox-notify = { version = "1", features = ["pve-context"] }
proxmox-openid = "1"
proxmox-resource-scheduling = "1"
proxmox-shared-cache = "1"
proxmox-subscription = "1"
proxmox-sys = "1"
proxmox-tfa = { version = "6", features = ["api"] }
proxmox-time = "2"
proxmox-ve-config = { version = "0.3" }
