[package]
name = "pve-rs"
version = "0.10.9"
description = "PVE parts which have been ported to Rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2024"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = ["debian"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base32 = "0.4"
hex = "0.4"
http = "1"
libc = "0.2"
nix = "0.29"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
tracing = "0.1.37"
url = "2"

perlmod = { version = "0.14", features = ["exporter"] }

proxmox-apt = { version = "0.99.2", features = ["cache"] }
proxmox-apt-api-types = "2"
proxmox-base64 = "1"
proxmox-config-digest = "1"
proxmox-frr = { version = "0.1" }
proxmox-http = { version = "1.0.2", features = ["client-sync", "client-trait"] }
proxmox-http-error = "1"
proxmox-log = "1"
proxmox-network-types = "0.1"
proxmox-notify = { version = "1", features = ["pve-context"] }
proxmox-openid = "1.0.2"
proxmox-resource-scheduling = "1"
proxmox-section-config = "3"
proxmox-shared-cache = "1"
proxmox-subscription = "1"
proxmox-sys = "1"
proxmox-tfa = { version = "6.0.2", features = ["api"] }
proxmox-time = "2"
proxmox-ve-config = { version = "0.4.2", features = [ "frr" ] }

# [patch.crates-io]
# pbs-api-types = { path = "../../proxmox/pbs-api-types" }
# proxmox-access-control = { path = "../../proxmox/proxmox-access-control" }
# proxmox-acme-api = { path = "../../proxmox/proxmox-acme-api" }
# proxmox-acme = { path = "../../proxmox/proxmox-acme" }
# proxmox-api-macro = { path = "../../proxmox/proxmox-api-macro" }
# proxmox-apt-api-types = { path = "../../proxmox/proxmox-apt-api-types" }
# proxmox-apt = { path = "../../proxmox/proxmox-apt" }
# proxmox-async = { path = "../../proxmox/proxmox-async" }
# proxmox-auth-api = { path = "../../proxmox/proxmox-auth-api" }
# proxmox-base64 = { path = "../../proxmox/proxmox-base64" }
# proxmox-borrow = { path = "../../proxmox/proxmox-borrow" }
# proxmox-client = { path = "../../proxmox/proxmox-client" }
# proxmox-compression = { path = "../../proxmox/proxmox-compression" }
# proxmox-config-digest = { path = "../../proxmox/proxmox-config-digest" }
# proxmox-daemon = { path = "../../proxmox/proxmox-daemon" }
# proxmox-dns-api = { path = "../../proxmox/proxmox-dns-api" }
# proxmox-http-error = { path = "../../proxmox/proxmox-http-error" }
# proxmox-http = { path = "../../proxmox/proxmox-http" }
# proxmox-human-byte = { path = "../../proxmox/proxmox-human-byte" }
# proxmox-io = { path = "../../proxmox/proxmox-io" }
# proxmox-lang = { path = "../../proxmox/proxmox-lang" }
# proxmox-ldap = { path = "../../proxmox/proxmox-ldap" }
# proxmox-log = { path = "../../proxmox/proxmox-log" }
# proxmox-login = { path = "../../proxmox/proxmox-login" }
# proxmox-metrics = { path = "../../proxmox/proxmox-metrics" }
# proxmox-network-api = { path = "../../proxmox/proxmox-network-api" }
# proxmox-network-types = { path = "../../proxmox/proxmox-network-types" }
# proxmox-notify = { path = "../../proxmox/proxmox-notify" }
# proxmox-openid = { path = "../../proxmox/proxmox-openid" }
# proxmox-product-config = { path = "../../proxmox/proxmox-product-config" }
# proxmox-resource-scheduling = { path = "../../proxmox/proxmox-resource-scheduling" }
# proxmox-rest-server = { path = "../../proxmox/proxmox-rest-server" }
# proxmox-router = { path = "../../proxmox/proxmox-router" }
# proxmox-rrd-api-types = { path = "../../proxmox/proxmox-rrd-api-types" }
# proxmox-rrd = { path = "../../proxmox/proxmox-rrd" }
# proxmox-s3-client = { path = "../../proxmox/proxmox-s3-client" }
# proxmox-schema = { path = "../../proxmox/proxmox-schema" }
# proxmox-section-config = { path = "../../proxmox/proxmox-section-config" }
# proxmox-sendmail = { path = "../../proxmox/proxmox-sendmail" }
# proxmox-serde = { path = "../../proxmox/proxmox-serde" }
# proxmox-shared-cache = { path = "../../proxmox/proxmox-shared-cache" }
# proxmox-shared-memory = { path = "../../proxmox/proxmox-shared-memory" }
# proxmox-simple-config = { path = "../../proxmox/proxmox-simple-config" }
# proxmox-sortable-macro = { path = "../../proxmox/proxmox-sortable-macro" }
# proxmox-subscription = { path = "../../proxmox/proxmox-subscription" }
# proxmox-sys = { path = "../../proxmox/proxmox-sys" }
# proxmox-syslog-api = { path = "../../proxmox/proxmox-syslog-api" }
# proxmox-systemd = { path = "../../proxmox/proxmox-systemd" }
# proxmox-tfa = { path = "../../proxmox/proxmox-tfa" }
# proxmox-time-api = { path = "../../proxmox/proxmox-time-api" }
# proxmox-time = { path = "../../proxmox/proxmox-time" }
# proxmox-uuid = { path = "../../proxmox/proxmox-uuid" }
# proxmox-worker-task = { path = "../../proxmox/proxmox-worker-task" }
